# librsm

./: .gitignore  AUTHORS  Makefile.am  README.org  configure.ac
examples/: Makefile.am  ioinfo.cpp  milling.cpp  offset.cpp  simplify.cpp  sphere.cpp  view.cpp
examples/resm/: milling.py
examples/resm/dragon/: dragon.ply  finish.cfg  rough.cfg
examples/resm/human/: finish.cfg  human.ply  rough.cfg
examples/resm/sphere/: finish.cfg  rough.cfg  sphere.ply
examples/resm/tiger/: finish.cfg  rough.cfg  tiger.ply
examples/reso/: offset.py
examples/reso/sphere/: sphere.ply
examples/ress/: simplify.py
examples/ress/hemisphere/: hemisphere.ply
examples/ress/tiger/: tiger.ply
examples/tools/: ply2smf  qslim  smf2ply
src/: Makefile.am  display.cpp  display.h  edge.cpp  edge.h  face.cpp  face.h  ilp.cpp  ilp.h  ipc.cpp  ipc.h  ipp.cpp  ipp.h  ncparams.cpp  ncparams.h  quadric.cpp  quadric.h  qvertex.cpp  remc.h  simstr.h  surface.cpp  surface.h  vector.h  vertex.cpp  vertex.h
