
AM_CPPFLAGS = -I/usr/include/glib-2.0 -I../src
LDADD = ../src/libremc.a

noinst_PROGRAMS = ioinfo sphere offset simplify milling view
ioinfo_SOURCES = ioinfo.cpp
sphere_SOURCES = sphere.cpp
offset_SOURCES = offset.cpp
simplify_SOURCES = simplify.cpp
milling_SOURCES = milling.cpp
view_SOURCES = view.cpp
