
AM_CPPFLAGS = -I/usr/include/glib-2.0

lib_LIBRARIES = libremc.a
libremc_a_SOURCES = remc.h \
					simstr.h vector.h \
					quadric.h quadric.cpp \
					vertex.h vertex.cpp \
					edge.h edge.cpp \
					face.h face.cpp \
					surface.h surface.cpp \
					ncparams.h ncparams.cpp \
					ipc.h ipc.cpp \
					ipp.h ipp.cpp \
					ilp.h ilp.cpp \
					display.h display.cpp
EXTRA_DIST = glibconfig.h
